Skip to content

Improve V4L audio device behaviour

Debian bug #316377



I tried to use v4l to stream my webcam content. Everything works but I cannot
get any audio output even though the right /dev/dsp is specified. I then went
through the source code and found something which IMO is logically not correct.

The v4l code would query the v4l device to see if there is audio device 
associated with it and if there is none, it would turn off audio input part.
However, the webcam I have do have a USB mic input but it just isn't considered 
as part of the video capture device(this is understandable as the vendor just
put two seperate pieces of thing together, pure reference design).

At the moment, I just change the device driver (spca5xx) to report a audio
channel(even though it doesn't applies to all devices) but I think it should
be vlc(v4l) that needs to be changed to ignore this part of check and just take
whatever given as adev and use it.

mplayer is doing the right thing as it just take the vin,ain and combine them
together, well it cannot do any streaming though. Whether the adev is reported
in the v4l driver doesn't really matter.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information