Don't disable audio if V4L video dev does not have an audio dev too. Closes:#254

Thanks to Timothy Lee < timothy d0t lee @t siriushk d0t c0m > for the patch.